trunk/Archive2/38/f8d49ea706ff48/output
main.cpp: In function 'bool isInterleaved(char*, char*, char*)':
main.cpp:15:21: warning: ISO C++ forbids variable length array 'IL' [-Wvla]
     bool IL[M+1][N+1];
                     ^
main.cpp:15:21: warning: ISO C++ forbids variable length array 'IL' [-Wvla]
main.cpp:21:26: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
     if ((M+N) != strlen(C))
                          ^
main.cpp:27:22: error: expected ';' before 'j'
         for (int j=1 j<=N; ++j)
                      ^
main.cpp: In function 'int main()':
main.cpp:37:43: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
     isInterleaved("KLM" , "ZMK" , "ZKLMKM");
                                           ^
main.cpp:37:43: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
main.cpp:37:43: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
